--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -10,14 +10,14 @@
 
 #container strong {
   font-size: 20px;
-  line-height: 26px;
+  line-height: 30px;
 }
 
 #container p {
   font-size: 16px;
-  line-height: 22px;
+  line-height: 20px;
 
-  color: #8c8c8c;
+  color: #df8686;
 
   margin: 0;
 }
