--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,12 +9,11 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">ExamenPARCIAL1 Luis Cardenas</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <ion-item routerLink="/formulario">Pasar al Fomrulario</ion-item>
   </div>
 </ion-content>
