--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,19 +1,29 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Luis Cardenas ExamenPARCIAL1
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">ExamenPARCIAL1 Luis Cardenas</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <ng-container *ngIf="frase; else loading">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>
+          {{frase.quote}}
+        </ion-card-title>
+        <ion-card-subtitle> Autor: {{frase.author}}</ion-card-subtitle>
+      </ion-card-header>
+    </ion-card>
+  </ng-container>
 
   <div id="container">
-    <ion-item routerLink="/formulario">Pasar al Fomrulario</ion-item>
+    <ion-item routerLink="/formulario">Pasar al Formulario</ion-item>
   </div>
+
+  <ng-template #loading>
+    <ion-spinner name="crescent">
+    </ion-spinner>
+  </ng-template>
 </ion-content>
